Replace JSHint and JSCS with eslint

--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,15 @@
 !\.config
 !\.config/git
 !\.config/git/ignore
-!\.git-prompt.sh
+!\.git-prompt\.sh
 !\.gitconfig
 !\.gitignore
 !\.globalgitignore
 !\.inputrc
-!\.jscsrc
-!\.jshintrc
+!\.eslintrc\.yml
 !\.nanorc
 !\.profile
 !\.vimrc
 !\src
 !\src/*
-\src/*.sw[a-p]
+\src/*\.sw[a-p]
