Install YAML linter

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,17 @@
 !\.config
 !\.config/git
 !\.config/git/ignore
+!\.eslintrc\.yml
 !\.git-prompt\.sh
 !\.gitconfig
 !\.gitignore
 !\.globalgitignore
 !\.inputrc
-!\.eslintrc\.yml
+!\.mdstyle
 !\.nanorc
 !\.profile
 !\.vimrc
+!\.yamllint
 !\src
 !\src/*
 \src/*\.sw[a-p]
