Squash all Windows changes into a single commit
- Add aliases for gVim and Beyond Compare
- Add placeholder .vimrc
- Remove Go packages and explicit GNU/brew toolchain from .profile
- Update .globalgitignore for Windows
- Add a global .gitattributes file

    This is necessary on Windows because it views lots of text files as binary
    by default (e.g. .c and .h files, ...).

- Let grep process ‘binary’ files as text
- Remove Karabiner settings from this branch
- Update Mercurial config for Windows
- Add Mintty preferences to repository
- Update README

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,9 +3,9 @@
 	email = joe.cridge@me.com
 	signingkey = DD659648
 [core]
-	editor = nvim
-	autocrlf = input
+	autocrlf = true
 	excludesfile = ~/.globalgitignore
+	attributesfile = ~/.globalgitattributes
 [color]
 	ui = true
 [format]
@@ -25,10 +25,8 @@
 	puhs = push
 	stat = shortlog -sne
 	ar = archive
-[credential]
-	helper = osxkeychain
 [diff]
-	tool = nvim -d
+	tool = bc
 	compactionHeuristic = true
 	submodule = log
 [filter "lfs"]
@@ -41,7 +39,7 @@
 [difftool]
 	prompt = false
 [merge]
-	tool = nvim -d
+	tool = bc
 	conflictstyle = diff3
 [mergetool]
 	prompt = false
