--- a/.globalgitignore
+++ b/.globalgitignore
@@ -21,11 +21,8 @@
 *.msm
 *.msp
 
-# GPG
-secring.*
-
 # MATLAB
-*.m~
+*.asv
 *.mex*
 slprj/
 
@@ -39,29 +36,13 @@ slprj/
 
 # Office
 *.tmp
-~$*.doc*
-~$*.xls*
+~$*.do[ct]*
+~$*.xl[sta]*
 *.xlk
-~$*.ppt*
-
-# macOS
-.AppleDB
-.AppleDesktop
-.AppleDouble
-.DS_Store
-.DocumentRevisions-V100
-.LSOverride
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-._*
-.apdisk
-.fseventsd
-.localized
-Icon
-Network Trash Folder
-Temporary Items
+~$*.p[po][tasd]*
+~$*.sld*
+~$*thm*
+~$*.mht*
 
 # Vim
 [._]*.s[a-w][a-z]
@@ -71,17 +52,16 @@ Session.vim
 *~
 tags
 
-# Xcode
-DerivedData/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata/
-*.moved-aside
-*.xccheckout
-*.xcscmblueprint
+# Visual Studio
+.vscode
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
