--- a/.hgrc
+++ b/.hgrc
@@ -47,5 +47,5 @@ summarylen = 50
 tasktabs = west
 
 [ui]
-ignore = ~/.globalhgignore
+ignore = C:\cygwin64\home\joe\.globalhgignore
 username = Joe Cridge <joe.cridge@me.com>
