--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 !\.gitconfig
 !\.gitignore
 !\.globalgitignore
+!\.hidden
 !\.inputrc
 !\.mdstyle
 !\.profile
@@ -34,10 +35,3 @@
 # Track everything from the resources folder.
 !resources/
 !resources/**
-
-
-# Track Karabiner settings.
-!Library/
-!Library/Application Support
-!Library/Application Support/Karabiner/
-!Library/Application Support/Karabiner/private.xml
