Add Jeo as a submodule

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 !Library/Application Support
 !Library/Application Support/Karabiner/
 !Library/Application Support/Karabiner/private.xml
+!Library/Application Support/Karabiner/Jeo
