Track C files under src

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@
 # .globalgitignore, so that (for instance) adding the pattern !src/* will cause
 # Git to track src/.blah.sh.swp, src/.DS_Store and the like.
 !src/
+!src/**/*.c
+!src/**/*.h
 !src/*.pl
 !src/*.py
 !src/*.rb
