--- a/.gitmodules
+++ b/.gitmodules
@@ -55,6 +55,9 @@
 [submodule "vim-gitgutter"]
 	path = .vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim-jinja"]
+	path = .vim/bundle/vim-jinja
+	url = https://github.com/niftylettuce/vim-jinja.git
 [submodule "vim-jsx"]
 	path = .vim/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
