Start transition from Karabiner to Hammerspoon

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@
 !Library/Application Support/Karabiner/
 !Library/Application Support/Karabiner/private.xml
 !Library/Application Support/Karabiner/Jeo
+
+# Track Hammerspoon settings.
+!.hammerspoon/
+!.hammerspoon/*.lua
