Update git LFS config

--- a/.gitconfig
+++ b/.gitconfig
@@ -53,8 +53,9 @@
 	compactionHeuristic = true
 	submodule = log
 [filter "lfs"]
-	clean = git lfs clean %f
-	smudge = git lfs smudge %f
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 	required = true
 [push]
 	default = simple
