--- a/.gitmodules
+++ b/.gitmodules
@@ -49,12 +49,18 @@
 [submodule "vim-eunuch"]
 	path = .vim/bundle/vim-eunuch
 	url = https://github.com/tpope/vim-eunuch.git
+[submodule "vim-flow"]
+	path = .vim/bundle/vim-flow
+	url = https://github.com/flowtype/vim-flow.git
 [submodule "vim-fugitive"]
 	path = .vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim-gitgutter"]
 	path = .vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim-javascript"]
+	path = .vim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
 [submodule "vim-jinja"]
 	path = .vim/bundle/vim-jinja
 	url = https://github.com/niftylettuce/vim-jinja.git
@@ -100,6 +106,3 @@
 [submodule "YouCompleteMe"]
 	path = .vim/bundle/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
-[submodule "vim-javascript"]
-	path = .vim/bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
