--- a/.globalgitignore
+++ b/.globalgitignore
@@ -45,22 +45,23 @@ slprj/
 ~$*.ppt*
 
 # macOS
-.DS_Store
+.AppleDB
+.AppleDesktop
 .AppleDouble
-.LSOverride
-Icon
-._*
+.DS_Store
 .DocumentRevisions-V100
-.fseventsd
+.LSOverride
 .Spotlight-V100
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
-.AppleDB
-.AppleDesktop
+._*
+.apdisk
+.fseventsd
+.localized
+Icon
 Network Trash Folder
 Temporary Items
-.apdisk
 
 # Vim
 [._]*.s[a-w][a-z]
