--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,54 @@
 [submodule "vim/sleuth"]
 	path = .vim/bundle/vim-sleuth
 	url = https://github.com/tpope/vim-sleuth
+[submodule "vim/surround"]
+	path = .vim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround
+[submodule "vim/uninpaired"]
+	path = .vim/bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
+[submodule "vim/endwise"]
+	path = .vim/bundle/vim-endwise
+	url = https://github.com/tpope/vim-endwise
+[submodule "vim/fugitive"]
+	path = .vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive
+[submodule "vim/fubitive"]
+	path = .vim/bundle/vim-fubitive
+	url = https://github.com/tommcdo/vim-fubitive
+[submodule "vim/rhubarb"]
+	path = .vim/bundle/vim-rhubarb
+	url = https://github.com/tpope/vim-rhubarb
+[submodule "vim/vinegar"]
+	path = .vim/bundle/vim-vinegar
+	url = https://github.com/tpope/vim-vinegar
+[submodule "vim/characterize"]
+	path = .vim/bundle/vim-characterize
+	url = https://github.com/tpope/vim-characterize
+[submodule "vim/speeddating"]
+	path = .vim/bundle/vim-speeddating
+	url = https://github.com/tpope/vim-speeddating
+[submodule "vim/eunuch"]
+	path = .vim/bundle/vim-eunuch
+	url = https://github.com/tpope/vim-eunuch
+[submodule "vim/projectionist"]
+	path = .vim/bundle/vim-projectionist
+	url = https://github.com/tpope/vim-projectionist
+[submodule "vim/commentary"]
+	path = .vim/bundle/vim-commentary
+	url = https://github.com/tpope/vim-commentary
+[submodule "vim/ragtag"]
+	path = .vim/bundle/vim-ragtag
+	url = https://github.com/tpope/vim-ragtag
+[submodule "vim/repeat"]
+	path = .vim/bundle/vim-repeat
+	url = https://github.com/tpope/vim-repeat
+[submodule "vim/abolish"]
+	path = .vim/bundle/tpope-vim-abolish
+	url = https://github.com/tpope/tpope-vim-abolish
+[submodule "vim/jdaddy"]
+	path = .vim/bundle/vim-jdaddy
+	url = https://github.com/tpope/vim-jdaddy
+[submodule "vim/haystack"]
+	path = .vim/bundle/vim-haystack
+	url = https://github.com/tpope/vim-haystack
