--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,30 @@
 [submodule "vim/haystack"]
 	path = .vim/bundle/vim-haystack
 	url = https://github.com/tpope/vim-haystack
+[submodule "vim/dockerfile"]
+	path = .vim/bundle/Dockerfile.vim
+	url = https://github.com/ekalinin/Dockerfile.vim
+[submodule "vim/javascript"]
+	path = .vim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript
+[submodule "vim/gitgutter"]
+	path = .vim/bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "vim/jst"]
+	path = .vim/bundle/vim-jst
+	url = https://github.com/briancollins/vim-jst
+[submodule "vim/ale"]
+	path = .vim/bundle/ale
+	url = https://github.com/w0rp/ale
+[submodule "vim/deoplete"]
+	path = .vim/bundle/deoplete.nvim
+	url = https://github.com/Shougo/deoplete.nvim
+[submodule "vim/neco-syntax"]
+	path = .vim/bundle/neco-syntax
+	url = https://github.com/Shougo/neco-syntax
+[submodule "vim/neco-vim"]
+	path = .vim/bundle/neco-vim
+	url = https://github.com/Shougo/neco-vim
+[submodule "vim/tern"]
+	path = .vim/bundle/deoplete-ternjs
+	url = https://github.com/carlitux/deoplete-ternjs
