Fix .config/nvim entries in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,12 +50,13 @@
 
 
 # Track everything in ~/.config/nvim. These are mostly submodules.
-!.config/nvim/
+!.config
+!.config/nvim
 !.config/nvim/**
-.config/nvim/.netrwhist
 .config/nvim/autoload/pathogen.vim
 .config/nvim/spell/en.utf-8.spl
 .config/nvim/spell/en.utf-8.sug
+.config/nvim/.netrwhist
 
 
 # Track Hammerspoon settings.
