Check in .terminfo
Italics don’t work in Neovim without this.

See <https://github.com/mhinz/dotfiles/blob/master/bin/fix-terminfo>.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,11 @@
 .config/nvim/.netrwhist
 
 
+# Track .terminfo
+!.terminfo
+!.terminfo/**/*
+
+
 # Track Hammerspoon settings.
 !.hammerspoon/
 !.hammerspoon/*.lua
