--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "vim/python-indent"]
 	path = .config/nvim/bundle/vim-python-pep8-indent
 	url = https://github.com/Vimjas/vim-python-pep8-indent.git
+[submodule "vim/yats"]
+	path = .config/nvim/bundle/yats.vim
+	url = https://github.com/HerringtonDarkholme/yats.vim
