--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "vim/yats"]
 	path = .config/nvim/bundle/yats.vim
 	url = https://github.com/HerringtonDarkholme/yats.vim
+[submodule "vim/go"]
+	path = .config/nvim/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
