Install Kotlin plugins for vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "vim/isort"]
 	path = .config/nvim/bundle/vim-isort
 	url = https://github.com/fisadev/vim-isort
+[submodule "vim/kotlin"]
+	path = .config/nvim/bundle/kotlin-vim
+	url = https://github.com/udalov/kotlin-vim
