--- a/.globalhgignore
+++ b/.globalhgignore
@@ -70,6 +70,10 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Python
+syntax: glob
+.python-version
+
 # Vim
 syntax: regexp
 [._].*\.s[a-w][a-z]
