--- a/.gitignore
+++ b/.gitignore
@@ -61,5 +61,10 @@ resources/macOS/
 .config/nvim/.netrwhist
 
 
+# Track i3 config.
+!.config/i3
+!.config/i3/**
+
+
 # Track locally installed fonts.
 !.local/share/fonts/**
