--- a/.gitmodules
+++ b/.gitmodules
@@ -135,9 +135,9 @@
 [submodule "vim/kinesis"]
 	path = .config/nvim/bundle/vim-kinesis
 	url = https://github.com/joecridge/vim-kinesis.git
-[submodule "vim/pqsql"]
-	path = .config/nvim/pgsql.vim
-	url = https://github.com/lifepillar/pgsql.vim
 [submodule "vim/mediawiki"]
 	path = .config/nvim/bundle/mediawiki.vim
 	url = https://github.com/chikamichi/mediawiki.vim
+[submodule "vim/pgsql"]
+	path = .config/nvim/bundle/pgsql.vim
+	url = https://github.com/lifepillar/pgsql.vim
