--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+# General
+[submodule "jeospoon"]
+	path = .hammerspoon/jeospoon
+	url = https://github.com/joecridge/jeospoon.git
 [submodule "private"]
 	path = private
 	url = git@github.com:joecridge/private.git
@@ -150,3 +154,6 @@
 [submodule "vim/simpyl-fold"]
 	path = .config/nvim/bundle/SimpylFold
 	url = https://github.com/tmhedberg/SimpylFold.git
+[submodule ".hammerspoon/jeospoon"]
+	path = .hammerspoon/jeospoon
+	url = https://github.com/joecridge/jeospoon
