--- a/.globalgitignore
+++ b/.globalgitignore
@@ -38,13 +38,24 @@ tramp
 # GPG
 secring.*
 
-# LibreOffice
-.~lock.*#
-
-# Linux
-.fuse_hidden*
-.directory
-.Trash-*
+# macOS
+.AppleDB
+.AppleDesktop
+.AppleDouble
+.DS_Store
+.DocumentRevisions-V100
+.LSOverride
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+._*
+.apdisk
+.fseventsd
+.localized
+Icon
+Network Trash Folder
+Temporary Items
 
 # MATLAB
 *.m~
@@ -59,6 +70,13 @@ slprj/
 .hgsubstate
 .hgtags
 
+# Office
+*.tmp
+~$*.doc*
+~$*.xls*
+*.xlk
+~$*.ppt*
+
 # Python
 .python-version
 
@@ -72,3 +90,18 @@ Session.vim
 .netrwhist
 *~
 tags
+
+# Xcode
+DerivedData/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
